Fixing comment management title bug and some warnings.
git-svn-id: https://svn.apache.org/repos/asf/roller/trunk@985005 13f79535-47bb-0310-9956-ffa450edef68